sample/error/eval_wdt_index.bfr
codegen [
  $build { x } in
  > x
]